test/error/test-06.ifj21
-- 4 (incompatible type at assignment)
require "ifj21"

function main()
    local a : integer = "foo"
end
